--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Peralstudio",
   "license": "ISC",
   "dependencies": {
+    "@devraelfreeze/discordjs-pagination": "^2.6.8",
     "@discordjs/voice": "^0.11.0",
     "axios": "^1.2.2",
     "chalk": "^5.0.1",
