--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "discord.js-minesweeper": "^1.1.0",
     "dotenv": "^16.0.3",
     "epic-free-games": "^3.1.1",
+    "fakeyou-api": "^1.0.0",
     "ffmpeg-static": "^5.0.2",
     "figlet": "^1.5.2",
     "googlethis": "^1.7.0",
