--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.4",
     "discord-gamecord": "^4.1.0",
     "discord-player": "^5.4.0",
+    "discord-together": "^1.3.31",
     "discord-tts": "^1.2.2",
     "discord.js": "^14.1.2",
     "discord.js-akinator": "^4.0.4",
