--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^5.0.1",
     "cherio": "^1.0.0-rc.2",
     "dayjs": "^1.11.4",
+    "discord-backup": "^3.3.2",
     "discord-gamecord": "^4.1.0",
     "discord-player": "^5.4.0",
     "discord-together": "^1.3.31",
