--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "engines": {
+    "node": ">=17.9.1"
+  },
   "author": "Peralstudio",
   "license": "ISC",
   "dependencies": {
