📚 docs : Add new variables

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ TWITCH_CHANNEL_ID=*****
 YOUTUBE_CHANNEL_ID=*****
 EPICGAMES_CHANNEL_ID=*****
 GENERAL_CHANNEL_ID=*****
-NEWSCATCHERAPI_KEY=*****
+GNEWS_KEY=*****
 NOTICIAS_CHANNEL_ID=*****
 ERRORES_BOT_CHANNEL=*****
 WEBHOOK_ERRORESBOT=*****
@@ -31,3 +31,4 @@ WEBHOOK_GENERAL_CHANNEL=*****
 WEBHOOK_BOT_DMS_CHANNEL=*****
 BOT_DMS_CHANNEL_ID=*****
 BARD_PSID=*****
+WEBHOOK_NOTICIAS_CHANNEL=*****
