--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ffmpeg-static": "^5.1.0",
     "figlet": "^1.5.2",
     "format-duration": "^3.0.2",
+    "generate-password": "^1.7.1",
     "google-it": "^1.6.4",
     "google-play-scraper": "^9.1.1",
     "mathjs": "^11.5.0",
