--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@devraelfreeze/discordjs-pagination": "^2.6.8",
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.11.0",
+    "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.2.2",
     "chalk": "^5.0.1",
     "cherio": "^1.0.0-rc.2",
