--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "openai": "^3.2.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
+    "prism-media": "^1.3.5",
     "reddit-fetch": "^1.5.1",
     "request": "^2.88.2",
     "soundboard-src": "^1.1.2",
