--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@devraelfreeze/discordjs-pagination": "^2.6.8",
     "@discordjs/opus": "^0.8.0",
-    "@discordjs/voice": "^0.11.0",
+    "@discordjs/voice": "^0.17.0",
     "axios": "^1.2.2",
     "chalk": "^5.0.1",
     "cherio": "^1.0.0-rc.2",
@@ -52,9 +52,11 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^2.6.9",
     "node-google-translate-skidz": "^1.1.2",
+    "node-opus": "^0.3.3",
     "node-superfetch": "^0.2.3",
     "nodemailer": "^6.7.8",
     "openai": "^3.2.1",
+    "opusscript": "^0.0.8",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prism-media": "^1.3.5",
