--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "request": "^2.88.2",
     "soundboard-src": "^1.1.2",
     "super-djs": "^1.7.4",
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^5.0.0",
     "yt-channel-info": "^3.2.1",
     "ytdl-core": "^4.11.5"
   },
