--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.17.0",
     "axios": "^1.2.2",
-    "chalk": "^5.0.1",
     "cherio": "^1.0.0-rc.2",
     "child_process": "^1.0.2",
     "date-fns": "^3.6.0",
@@ -67,7 +66,8 @@
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
     "yt-channel-info": "^3.2.1",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "ytpl": "^2.3.0"
   },
   "devDependencies": {
     "@napi-rs/canvas-linux-arm64-gnu": "^0.1.44"
