--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.2.2",
     "cherio": "^1.0.0-rc.2",
     "child_process": "^1.0.2",
+    "cron-parser": "^4.9.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.4",
     "discord-arts": "^0.6.1",
@@ -47,6 +48,7 @@
     "mathjs": "^11.5.0",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^6.8.4",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.6.9",
